--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  width: 960px;
+  width: 80%;
   margin: 0px auto;
 }
 
@@ -151,10 +151,18 @@
 }
 
 /*  services */
+.grade {
+  display: flex;
+  /* justify-content: center; */
+  flex-wrap: wrap;
+}
+
 .services .item {
-  width: 33.33333%;
-  float: left;
+  width: 30%;
+  /* float: left; */
   padding: 20px 0px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .services .item h2 {
@@ -163,7 +171,7 @@
 
 .services .item i {
   width: 30%;
-  float: left;
+  /* float: left; */
   color: #1bbc9d;
   padding-top: 5px;
 }
@@ -250,7 +258,7 @@
 
 /*start time section*/
 .time {
-  height: 400px;
+  height: 500px;
   background-image: url(../images/ximac.jpg);
   background-size: cover;
   position: relative;
@@ -270,7 +278,7 @@
 }
 
 .time .overlay h2 {
-  font-size: 40px;
+  font-size: 2em;
   margin-top: 89px;
 }
 
@@ -291,8 +299,23 @@
   display: none;
 }
 
-.time .overlay .slide .act {
+/* .time .overlay .slide .act {
   display: block;
+} */
+
+.time .overlay .slide .round {
+  border-radius: 50%;
+  width: 10em;
+  margin: 0 auto;
+  height: 10em;
+  overflow: hidden;
+}
+
+.time .overlay .slide .round img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: 0 auto;
 }
 /*end time*/
 
@@ -371,15 +394,18 @@
   line-height: 12;
   text-align: center;
   display: none;
+  transition: all 0.2s ease-in-out;
 }
 
 .projects .gallery div:hover .overlay {
   display: block;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
-.projects .gallery .mix {
-  /*display: none;*/
-}
+/* .projects .gallery .mix {
+  display: none;
+} */
 
 /*end projects*/
 
@@ -515,3 +541,56 @@
 }
 
 /*end footer*/
+
+/*media*/
+
+/* @media (max-width: 1200px) {
+  .services .item {
+    width: 33.33333%;    
+  }
+} */
+
+@media (max-width: 992px) {
+  .services .item {
+    width: 50%;
+  }
+  .services .item i {
+    width: 10%;
+  }
+  .services .item .info p {
+    padding-left: 10%;
+  }
+  .services .item h2 {
+    padding-left: 8px;
+  }
+}
+
+@media (max-width: 768px) {
+  .services .item {
+    width: 40%;
+  }
+  .services .item i {
+    width: 10%;
+  }
+  .services .item .info p {
+    padding-left: 15px;
+  }
+  .services .item h2 {
+    padding-left: 8px;
+  }
+}
+
+@media (max-width: 480px) {
+  .services .item {
+    width: 100%;
+  }
+  .services .item i {
+    width: 10%;
+  }
+  .services .item .info p {
+    padding-left: 15px;
+  }
+  .services .item h2 {
+    padding-left: 8px;
+  }
+}
